--- a/css/styles.css
+++ b/css/styles.css
@@ -1353,6 +1353,7 @@ input::placeholder {
     .section-one {
         background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
             url(../images/people-mobile@1x.jpg);
+        max-width: 320px;
     }
 }
 
