--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ a {
 }
 
 
-.nav-item .menu-studio {
+.nav-item .current {
     color: #404bbf;
     font-weight: 500;
     font-size: 16px;
@@ -175,7 +175,7 @@ a {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-item .menu-studio::after {
+.nav-item .current::after {
     border-radius: 2px;
     width: 100%;
     height: 4px;
@@ -726,7 +726,7 @@ address {
     }
 }
 
-/* Footer Section */
+/* -----------------------------Footer Section----------------------------- */
 
 .footer-section {
     background-color: #2e2f42;
@@ -1063,7 +1063,7 @@ address {
     margin-top: 48px;
 }
 
-/* Modal Window */
+/* -----------------------------Modal Window----------------------------- */
 
 .modal-overlay.is-open {
     opacity: 1;
@@ -1224,11 +1224,9 @@ address {
     align-items: center;
     justify-content: center;
     fill: transparent;
+    flex-shrink: 0;
 }
 
-.check-accept-div .terms-mobile {
-    width: 231px;
-}
 
 input[type="checkbox"]:checked+.check-accept-div>.span-icon-check {
     background-color: #404bbf;
@@ -1324,10 +1322,6 @@ input::placeholder {
 
     .modal-mobile-menu {
         display: none;
-    }
-
-    .check-accept-div .terms-mobile {
-        width: 100%;
     }
 }
 
